--- a/src/App.css
+++ b/src/App.css
@@ -148,12 +148,20 @@ section {
 
 .header .cart-items-container {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   top: 100%;
   right: -100%;
   height: calc(100vh - 9.5rem);
   width: 35rem;
   background: #fff;
   padding: 0 1.5rem;
+  overflow: scroll;
+  padding: 1rem;
+}
+.cart-items-container::-webkit-scrollbar {
+  display: none;
 }
 
 .header .cart-items-container.active {
@@ -181,6 +189,7 @@ section {
   display: flex;
   justify-content: space-between;
   color: #13131a;
+  width: 100%;
   font-size: 2rem;
   font-weight: bold;
 }
@@ -207,6 +216,10 @@ section {
 .header .cart-items-container .btn {
   width: 100%;
   text-align: center;
+}
+
+.cart-item {
+  width: 100%;
 }
 
 .home {
