--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ section {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .header .logo img {
@@ -81,6 +81,7 @@ section {
   margin: 0 1rem;
   font-size: 1.6rem;
   color: #fff;
+  cursor: pointer;
 }
 
 .header .navbar a:hover {
@@ -584,6 +585,137 @@ section {
   color: #ffc107;
 }
 
+.loginSection {
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+.loginForm-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+  width: fit-content;
+  background-color: #13131a;
+  height: fit-content;
+  color: white;
+  text-align: center;
+}
+
+.loginForm-title {
+  color: #ffc107;
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin-bottom: 1rem;
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.loginForm .inputBox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background: #13131a;
+  border: 0.2rem solid #ffc107;
+}
+
+.loginForm .inputBox .fa-eye {
+  cursor: pointer;
+}
+
+.loginForm .inputBox span {
+  color: #fff;
+  font-size: 2rem;
+  padding-left: 2rem;
+}
+
+.loginForm .inputBox input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  color: #fff;
+  text-transform: none;
+  background: none;
+}
+
+.errmsg {
+  font-size: 13px;
+  padding: 0.5rem;
+  background-color: rgba(51, 51, 69, 0.565);
+  text-transform: lowercase;
+}
+
+.cancel {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 30px;
+  cursor: pointer;
+}
+.cancel :hover {
+  color: #ffc107;
+}
+
+.dashboard {
+  margin-top: 9rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  /* border: 2px solid red; */
+  padding-bottom: 5rem;
+}
+
+.dashboard h1 {
+  margin-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 15px;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  font-size: 18px;
+  background-color: #232330;
+}
+
+tr:nth-child(even) {
+  background-color: #13131a;
+}
+
+.del {
+  font-size: 20px;
+  cursor: pointer;
+}
+.del:hover {
+  color: #ffc107;
+}
+.small {
+  margin: 1rem;
+  text-transform: lowercase;
+}
+
 /* media queries  */
 @media (max-width: 991px) {
   html {
@@ -650,70 +782,4 @@ section {
   html {
     font-size: 50%;
   }
-}
-
-.products {
-  position: relative;
-}
-.single_product {
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* background-color: #fff; */
-  backdrop-filter: blur(8px);
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.single_prod-content {
-  position: relative;
-  display: flex;
-  width: 80%;
-  background-color: #13131a;
-  height: 80%;
-}
-
-.single_prod-img {
-  height: 100%;
-  width: 50%;
-  flex-grow: 1;
-  /* border: 1px solid white; */
-}
-.single_prod-img img {
-  height: 100%;
-  width: 100%;
-}
-.prod-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: white;
-  padding: 3rem;
-  gap: 1rem;
-}
-
-.prod-title {
-  color: #ffc107;
-  font-size: 2.5rem;
-  font-weight: 900;
-  margin-bottom: 1rem;
-}
-.prod-price {
-  font-size: 1.5rem;
-}
-.dic {
-  line-height: 2rem;
-}
-.prod-btn {
-  width: fit-content;
-}
-.prod-icon {
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
-  color: white;
-  font-size: 3rem;
-  cursor: pointer;
 }
